remove html file redirect

--- a/JS 中经常使用的小技巧，助你更简短的实现一些功能 - 个人文章 - SegmentFault 思否.html
+++ b/JS 中经常使用的小技巧，助你更简短的实现一些功能 - 个人文章 - SegmentFault 思否.html
@@ -2,15 +2,15 @@
 
 <!DOCTYPE HTML><html lang="zh-CN"><head><meta charset="UTF-8"/><meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1"/><meta name="renderer" content="webkit"/><meta property="qc:admins" content="15317273575564615446375"/><meta property="og:image" content="https://cdn.segmentfault.com/v-5cc2cd8e/global/img/touch-icon.png"/><meta name="viewport"
               content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/><meta name="alexaVerifyID" content="LkzCRJ7rPEUwt6fVey2vhxiw1vQ"/><meta name="apple-itunes-app" content="app-id=958101793, app-argument="><title>JS 中经常使用的小技巧，助你更简短的实现一些功能 - 个人文章 - SegmentFault 思否</title>
-              <title><a href="https://www.cnblogs.com/alantao/p/5859358.html">from</a></title>
+              <title><a href="https://segmentfault.com/a/1190000017365632">from</a></title>
               <meta name="description" content="原文： [链接] github 首页(star+watch，一手动态直达)： [链接] 掘金 link , 掘金 专栏 segmentfault 主页 原创禁止私自转载 广告 部门长期招收大量研发岗位【前端，后端，算法】，欢迎各位大神投递，踊跃尝试。..."/><meta name="keywords" content="typescript,html5,node.js,javascript"/><link rel="search" type="application/opensearchdescription+xml" href="/opensearch.xml" title="SegmentFault"/><link rel="shortcut icon" href="https://cdn.segmentfault.com/v-5cc2cd8e/global/img/favicon.ico"/><link rel="apple-touch-icon" href="https://cdn.segmentfault.com/v-5cc2cd8e/global/img/touch-icon.png"><meta name="msapplication-TileColor" content="#009a61"/><meta name="msapplication-square150x150logo" content="https://cdn.segmentfault.com/v-5cc2cd8e/global/img/touch-icon.png"/><meta name="baidu_union_verify" content="bcf7fd80dca60d53d46d5b46e1b990ca"><link rel="alternate" type="application/atom+xml" title="SegmentFault 最新问题" href="/feeds/questions"><link rel="alternate" type="application/atom+xml" title="SegmentFault 最新文章" href="/feeds/blogs"><link rel="stylesheet" href="https://cdn.segmentfault.com/v-5cc2cd8e/global/css/global.css"/><link rel="stylesheet" href="https://cdn.segmentfault.com/v-5cc2cd8e/blog/css/blog.css"/><link rel="stylesheet" href="https://cdn.segmentfault.com/v-5cc2cd8e/global/css/responsive.css"/><script type='text/javascript' src='https://sponsor.segmentfault.com/spcjs.php?id=1&block=1&repu=0&tag=typescript,html5,node.js,javascript'></script><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script><script>
         (adsbygoogle = window.adsbygoogle || []).push({
             google_ad_client: "ca-pub-6330872677300335",
             enable_page_level_ads: true
         });
     </script></head><!-- 推荐引擎 --><script charset="utf-8" id="ParadigmSDK" src="https://nbrecsys.4paradigm.com/sdk/js/ParadigmSDK_v2.js" data="216" defSI="594"></script><script>
-    ParadigmSDK.init("46e957bd9dea4acdaa15b4b64aff728f");
-    ParadigmSDK.trackDetailPageShow();
+    //ParadigmSDK.init("46e957bd9dea4acdaa15b4b64aff728f");
+    //ParadigmSDK.trackDetailPageShow();
 </script><body data-mod="blog"
     class="blog-post "><!--[if lt IE 9]><div class="alert alert-danger topframe" role="alert">你的浏览器实在<strong>太太太太太太旧了</strong>，放学别走，升级完浏览器再说 <a target="_blank" class="alert-link" href="http://browsehappy.com">立即升级</a></div><![endif]--><img id="icon4weChat" style="height: 0;width: 0;" data-src="https://cdn.segmentfault.com/v-5cc2cd8e/global/img/touch-icon-512.png"><div id="gridMapHoverBox" style="position:absolute; border: 1px solid #009a61; z-index:99; font-size: 10px; background:#fff"></div><div class="global-nav sf-header sf-header--index"><div class="bottom-nav visible-xs visible-sm "><div class="opts"><a class="opts-group " href="/"><i class="fa fa-home" aria-hidden="true"></i><span>首页</span></a><a class="opts-group " href="/questions"><i class="fa fa-comments" aria-hidden="true"></i><span>问答</span></a><a class="opts-group active" href="/blogs"><i class="fa fa-pencil-square" aria-hidden="true"></i><span>专栏</span></a><a class="opts-group " href="/lives"><i class="fa fa-play-circle" aria-hidden="true"></i><span>讲堂</span></a><div class="opts-group"><div class="btn-group dropup"><i class="fa fa-bars dropdown hoverDropdown" data-toggle="dropdown" aria-hidden="true"><span>更多</span></i><ul class="dropdown-menu"><li><a href="/jobs">职位</a></li><li><a href="/events">活动</a></li><li><a href="/tags">标签</a></li><li><a href="/badges">徽章</a></li></ul></div></div></div></div><nav class="container nav"><div class="visible-xs visible-sm header-response"><a href="/search" style="display:block"><i class="fa fa-search" aria-hidden="true"></i></a><div class="sf-header__logo sf-header__logo--response"><h1><a href="/" style="height:24px; background-size: auto 24px;"></a></h1></div><a href="/user/login" class="pull-right login-btn"><i class="fa fa-user" aria-hidden="true"></i></a></div><script>
 mobileScroll(
@@ -1420,17 +1420,7 @@ https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects
 
         var ddosMode = false;
     
-        (function (currentUrl) {
-        if (typeof URL != 'undefined') {
-            var baseUrl = new URL('https://segmentfault.com');
-
-            if (baseUrl.protocol != currentUrl.protocol
-                || baseUrl.host != currentUrl.host) {
-                window.location.href = baseUrl.protocol + '//' + baseUrl.host
-                    + currentUrl.pathname + currentUrl.search + currentUrl.hash;
-            }
-        }
-    })(window.location);
+        
     </script>
 
              <script crossorigin src="https://cdn.segmentfault.com/v-5cc2cd8e/3rd/assets.js"></script>
